fix: table overflow css fixed

--- a/style.css
+++ b/style.css
@@ -67,3 +67,26 @@ table.edit .delete {
   display: block;
 }
 
+table td::-webkit-scrollbar {
+  width: 0px;
+}
+
+table td::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+table td::-webkit-scrollbar-thumb {        
+  background-color: transparent;
+}
+
+#tableWrapper::-webkit-scrollbar,
+#tableWrapper::-webkit-scrollbar-thumb {
+  width: 26px;
+  border-radius: 13px;
+  background-clip: padding-box;
+  border: 10px solid transparent;
+}
+
+#tableWrapper::-webkit-scrollbar-thumb {        
+  box-shadow: inset 0 0 0 10px;
+}
